syntax = "proto3";

package PbTelemetry;

message LoginData
{
    string username = 1;
    string password = 2;
}